# Logger

./: .gitignore  README.md  my_logger.py  pyproject.toml
src/jvlogger/: jvlogger.py  logging.json
src/myLogger/: __init__.py  cli.py  lifecycle.py  logger_wrapper.py  myLogger.py
tests/: conftest.py  test_hooks.py  test_json_signing.py  test_lifecycle.py  test_logger_basic.py  test_multi_instance_merge.py  test_propagation.py  test_single_instance.py  test_utils_duration.py
