[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myLogger"
version = "0.1.0"
description = "Robust Python logger with JSON signing, single-instance lock, and application lifecycle metrics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Jonathan Verneau" }
]

dependencies = [
]

# ✅ Dépendances OPTIONNELLES (crucial)
[project.optional-dependencies]
monitoring = [
    "psutil>=5.9"
]

dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]